--- a/MusciBackgroundShared/AilianBTShared.csproj
+++ b/MusciBackgroundShared/AilianBTShared.csproj
@@ -107,8 +107,11 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonHelper.cs" />
+    <Compile Include="Helpers\JsonHelper.cs" />
+    <Compile Include="Models\MusicModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HttpBaseService.cs" />
+    <Compile Include="Services\MusicService.cs" />
     <EmbeddedResource Include="Properties\MusciBackgroundShared.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
