--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -111,6 +111,8 @@
     </Compile>
     <Compile Include="DAL\Class1.cs" />
     <Compile Include="Exceptions\Exceptions.cs" />
+    <Compile Include="Exceptions\OpenStreamFailedException.cs" />
+    <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="Helpers\VisualTreeHelperTool.cs" />
     <Compile Include="Migrations\20160731064812_init.cs" />
     <Compile Include="Migrations\20160731064812_init.designer.cs">
@@ -122,6 +124,7 @@
     </Compile>
     <Compile Include="Migrations\DownloadDbContextModelSnapshot.cs" />
     <Compile Include="Models\AilianResModel.cs" />
+    <Compile Include="Models\MusicModel.cs" />
     <Compile Include="Models\ThemeColorModel.cs" />
     <Compile Include="Models\DownloadDbContext.cs" />
     <Compile Include="Models\DownloadedInfo.cs" />
@@ -138,6 +141,7 @@
     <Compile Include="Services\DownloadService.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Services\HttpBaseService.cs" />
+    <Compile Include="Services\MusicManager.cs" />
     <Compile Include="Services\MusicService.cs" />
     <Compile Include="Services\NotificationService.cs" />
     <Compile Include="Services\SettingService.cs" />
@@ -299,16 +303,6 @@
     <PackageReference Include="System.Text.Encoding.CodePages">
       <Version>4.4.0</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AilianBTShared\AilianBTShared.csproj">
-      <Project>{87d06a2f-8d73-4f51-9206-74c7920914dc}</Project>
-      <Name>AilianBTShared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MusicBackground\MusicBackground.csproj">
-      <Project>{a9dcfeec-0e58-4203-bb01-f844d0b8c707}</Project>
-      <Name>MusicBackground</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="WindowsMobile, Version=10.0.16299.0">
