--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>AilianBT</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.18362.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -103,6 +103,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="AilianBTShared.csproj" />
     <None Include="AilianBT_StoreKey.pfx" />
     <None Include="App.config" />
   </ItemGroup>
@@ -118,7 +119,6 @@
     <Compile Include="DAL\Class1.cs" />
     <Compile Include="Exceptions\Exceptions.cs" />
     <Compile Include="Exceptions\OpenStreamFailedException.cs" />
-    <Compile Include="Helpers\JsonHelper.cs" />
     <Compile Include="Helpers\VisualTreeHelperTool.cs" />
     <Compile Include="Migrations\20160731064812_init.cs" />
     <Compile Include="Migrations\20160731064812_init.designer.cs">
@@ -130,7 +130,6 @@
     </Compile>
     <Compile Include="Migrations\DownloadDbContextModelSnapshot.cs" />
     <Compile Include="Models\AilianResModel.cs" />
-    <Compile Include="Models\MusicModel.cs" />
     <Compile Include="Models\ThemeColorModel.cs" />
     <Compile Include="Models\DownloadDbContext.cs" />
     <Compile Include="Models\DownloadedInfo.cs" />
@@ -146,9 +145,7 @@
     <Compile Include="Services\DbService.cs" />
     <Compile Include="Services\DownloadService.cs" />
     <Compile Include="Services\FileService.cs" />
-    <Compile Include="Services\HttpBaseService.cs" />
     <Compile Include="Services\MusicManager.cs" />
-    <Compile Include="Services\MusicService.cs" />
     <Compile Include="Services\NotificationService.cs" />
     <Compile Include="Services\SettingService.cs" />
     <Compile Include="Services\SimpleIoc.cs" />
@@ -294,7 +291,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AngleSharp">
-      <Version>0.9.9.1</Version>
+      <Version>0.14.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>1.1.5</Version>
@@ -303,22 +300,32 @@
       <Version>1.1.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.0.6</Version>
+      <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="MvvmLight">
-      <Version>5.3.0</Version>
+      <Version>5.4.1.1</Version>
     </PackageReference>
     <PackageReference Include="NotificationsExtensions.Win10">
       <Version>14332.0.2</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Encoding.CodePages">
-      <Version>4.4.0</Version>
+      <Version>4.7.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="WindowsMobile, Version=10.0.16299.0">
+    <SDKReference Include="WindowsMobile, Version=10.0.18362.0">
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AilianBT.Common\AilianBT.Common.csproj">
+      <Project>{0891d52e-4d8e-4da4-acdd-f1f8c45ca898}</Project>
+      <Name>AilianBT.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MusicBackground\MusicBackground.csproj">
+      <Project>{a9dcfeec-0e58-4203-bb01-f844d0b8c707}</Project>
+      <Name>MusicBackground</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
