--- a/MusicBackground/MusicBackground.csproj
+++ b/MusicBackground/MusicBackground.csproj
@@ -112,6 +112,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
+    <PackageReference Include="System.Text.Json">
+      <Version>4.7.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AilianBT.Common\AilianBT.Common.csproj">
