--- a/AilianBT.Common/AilianBT.Common.csproj
+++ b/AilianBT.Common/AilianBT.Common.csproj
@@ -122,9 +122,9 @@
   <ItemGroup>
     <Compile Include="Models\MusicModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\HttpBaseService.cs" />
-    <Compile Include="Services\JsonHelper.cs" />
+    <Compile Include="Services\HttpService.cs" />
     <Compile Include="Services\MusicService.cs" />
+    <Compile Include="ViewModelBase.cs" />
     <EmbeddedResource Include="Properties\AilianBT.Common.rd.xml" />
   </ItemGroup>
   <ItemGroup>
