--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -56,6 +56,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\SystemHelper.cs" />
+    <Compile Include="Models\MusicModel.cs" />
+    <Compile Include="Models\PlaylistItemModel.cs" />
     <Compile Include="Services\AilianBTService.cs" />
     <Compile Include="Constant\Definition.cs" />
     <Compile Include="Converters\ColorBrushConverter.cs" />
@@ -63,6 +66,7 @@
     <Compile Include="Converters\PlayStatusVisibilityConverter.cs" />
     <Compile Include="Helpers\AssertsHelper.cs" />
     <Compile Include="Models\DownloadStatus.cs" />
+    <Compile Include="Services\MusicService.cs" />
     <Compile Include="Views\Controls\KeyPannelControl.cs" />
     <Compile Include="Views\Controls\Notification.xaml.cs">
       <DependentUpon>Notification.xaml</DependentUpon>
