--- a/AilianBT/AilianBT.csproj
+++ b/AilianBT/AilianBT.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AilianBT</RootNamespace>
     <AssemblyName>AilianBT</AssemblyName>
-    <DefaultLanguage>zh-CN</DefaultLanguage>
+    <DefaultLanguage>zh-cn</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.18362.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
@@ -56,9 +56,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\SystemHelper.cs" />
+    <Compile Include="Helpers\UtilityHelper.cs" />
     <Compile Include="Models\MusicModel.cs" />
     <Compile Include="Models\PlaylistItemModel.cs" />
+    <Compile Include="Models\WindowMode.cs" />
     <Compile Include="Services\AilianBTService.cs" />
     <Compile Include="Constant\Definition.cs" />
     <Compile Include="Converters\ColorBrushConverter.cs" />
